deployments/k8s/infrastructure/overlays/prod/ingress-controller/patch-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: shared-gateway
spec:
  gatewayClassName: traefik
  listeners:
    - name: https-api
      protocol: HTTPS
      port: 443
      hostname: "api.discky.com"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: api-tls-cert
            namespace: traefik
    - name: https-dashboard
      protocol: HTTPS
      port: 443
      hostname: "traefik.discky.com"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: traefik-dashboard-tls-cert
            namespace: traefik
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.discky.com"
      allowedRoutes:
        namespaces:
          from: All
